# django-ads-txt

./: .travis.yml  LICENSE  LICENSE.txt  MANIFEST.in  README.md  README.rst  runtests.py  setup.cfg  setup.py  tox.ini
ads_txt/: admin.py  apps.py  models.py  settings.py  urls.py  views.py
ads_txt/migrations/: 0001_initial.py
ads_txt/templates/ads_txt/: change_form.html  rule_list.html
tests/: test_views.py
tests/test_utils/: urls.py
